<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtvwCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/custComm" />

    <EditText
        android:id="@+id/edtxtCustCommAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtvwCommand"
        android:layout_toLeftOf="@+id/chkbxRawComm"
        android:ems="10"
        android:hint="@string/CustCommHintAddress"
        android:inputType="number" >
		
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skbarSpeed"
        android:layout_centerHorizontal="true"
        android:text="@string/direction" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skbarSpeed"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/skbarSpeed"
        android:text="@string/send" />

    <TextView
        android:id="@+id/txtvwSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skbarSpeed"
        android:layout_below="@+id/spnTrain"
        android:layout_marginTop="16dp"
        android:text="@string/spdCtrl" />

    <SeekBar
        android:id="@+id/skbarSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtvwCommand"
        android:layout_below="@+id/txtvwSpeed" />

    <TextView
        android:id="@+id/txtvwTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edtxtCustCommAddress"
        android:layout_below="@+id/edtxtCustCommAddress"
        android:layout_marginTop="36dp"
        android:text="@string/selTrain" />

    <Spinner
        android:id="@+id/spnTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtvwTrain"
        android:layout_below="@+id/txtvwTrain"
        android:layout_toLeftOf="@+id/btnDirection" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spnTrain"
        android:layout_toRightOf="@+id/spnTrain"
        android:text="@string/add" />

    <TextView
        android:id="@+id/txtvwStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnConnect"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edtxtCustCommSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edtxtCustCommAddress"
        android:layout_alignRight="@+id/skbarSpeed"
        android:layout_toRightOf="@+id/chkbxRawComm"
        android:ems="10"
        android:hint="@string/CustCommHintSpeed"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/chkbxRawComm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtvwTrain"
        android:layout_centerHorizontal="true"
        android:text="@string/rawCommand" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSend"
        android:layout_centerHorizontal="true"
        android:text="@string/connect" />

</RelativeLayout>